--- a/swabIn/templates/swabIn/index.html
+++ b/swabIn/templates/swabIn/index.html
@@ -6,6 +6,14 @@ Swab.In
 {% endblock title %}
 {% block content %}
 <div>
-    Test 123
+    Hello World!
 </div>
+
+<button class='btn1'>
+    Click
+</button>
 {% endblock content %}
+
+{% block js %}
+<script src="{% static 'js/function.js' %}"></script>
+{% endblock js %}
