create layout informasi

--- a/swab_vaksin/templates/list_vaksin_swab.html
+++ b/swab_vaksin/templates/list_vaksin_swab.html
@@ -3,31 +3,125 @@
 
 <html>
   <head>
-    {% block css %} <link rel="stylesheet" href="{% static 'styles/list_vaksin_swab.css' %}" /> {% endblock css %}
+    {% block css %} <link rel="stylesheet" href="{% static 'styles/vaksin_swab.css' %}" /> {% endblock css %}
     {% block title %} Swab & Vaksin {% endblock title %}    
   </head>
   <body>
     {% block content %}
-      <div class='btn-wrapper'>
-        <button class='swab-btn'>Swab</button>
-        <button class='vaksin-btn'>Vaksin</button>
-      </div>
-      
-      <div class='crd-wrapper'>
-        <div class='cards'>
-          <div class='card'>
-            <div class='crd-header'>
-              <div class='cImage'><img  src="" alt=""></div>
-              <div class='cDescription'>
-                <h3>Vaksin</h3>
-                <h6>Produsen: </h6>
-                <h6>Tahun Produksi: </h6>
-                <h6>Frekuensi Suntik: </h6>
+      <div class='container'>
+        <div class='btn-wrapper'>
+          <button class='swab-btn'>Swab</button>
+          <button class='vaksin-btn'>Vaksin</button>
+        </div>
+        
+        <div class='contain-wrapper'>
+          <div class='cards'>
+            <div class='card'>
+              <div class='crd-header'>
+                <div class='cImage'><img  src="" alt=""></div>
+                <div class='cInformation' id='desc'>
+                  <h3>Vaksin</h3>
+                  <h6>Produsen: </h6>
+                  <h6>Tahun Produksi: </h6>
+                  <h6>Frekuensi Suntik: </h6>
+                </div>
+              </div>
+              <div class='crd-description'>
+                <p>Description</p>
+              </div>
+              <div class='crd-btn'>
+                <a href='informasi'>Read More</h6></a>
               </div>
             </div>
-            <p>Description</p>
-            <div class='crd-btn'>
-              <a href='informasi'>Read More</h6></a>
+
+            <div class='card'>
+              <div class='crd-header'>
+                <div class='cImage'><img  src="" alt=""></div>
+                <div class='cInformation'>
+                  <h3>Vaksin</h3>
+                  <h6>Produsen: </h6>
+                  <h6>Tahun Produksi: </h6>
+                  <h6>Frekuensi Suntik: </h6>
+                </div>
+              </div>
+              <div class='crd-description'>
+                <p>Description</p>
+              </div>
+              <div class='crd-btn'>
+                <a href='informasi'>Read More</h6></a>
+              </div>
+            </div>
+
+            <div class='card'>
+              <div class='crd-header'>
+                <div class='cImage'><img  src="" alt=""></div>
+                <div class='cInformation'>
+                  <h3>Vaksin</h3>
+                  <h6>Produsen: </h6>
+                  <h6>Tahun Produksi: </h6>
+                  <h6>Frekuensi Suntik: </h6>
+                </div>
+              </div>
+              <div class='crd-description'>
+                <p>Description</p>
+              </div>
+              <div class='crd-btn'>
+                <a href='informasi'>Read More</h6></a>
+              </div>
+            </div>
+
+            <div class='card'>
+              <div class='crd-header'>
+                <div class='cImage'><img  src="" alt=""></div>
+                <div class='cInformation'>
+                  <h3>Vaksin</h3>
+                  <h6>Produsen: </h6>
+                  <h6>Tahun Produksi: </h6>
+                  <h6>Frekuensi Suntik: </h6>
+                </div>
+              </div>
+              <div class='crd-description'>
+                <p>Description</p>
+              </div>
+              <div class='crd-btn'>
+                <a href='informasi'>Read More</h6></a>
+              </div>
+            </div>
+
+            <div class='card'>
+              <div class='crd-header'>
+                <div class='cImage'><img  src="" alt=""></div>
+                <div class='cInformation'>
+                  <h3>Vaksin</h3>
+                  <h6>Produsen: </h6>
+                  <h6>Tahun Produksi: </h6>
+                  <h6>Frekuensi Suntik: </h6>
+                </div>
+              </div>
+              <div class='crd-description'>
+                <p>Description</p>
+              </div>
+              <div class='crd-btn'>
+                <a href='informasi'>Read More</h6></a>
+              </div>
+            </div>
+
+            <div class='card'>
+              <div class='crd-header'>
+                <div class='cImage'><img  src="" alt=""></div>
+                <div class='cInformation'>
+                  <h3>Vaksin</h3>
+                  <h6>Produsen: </h6>
+                  <h6>Tahun Produksi: </h6>
+                  <h6>Frekuensi Suntik: </h6>
+                </div>
+              </div>
+              <div class='crd-description'>
+                <p>Description</p>
+              </div>
+              <div class='crd-btn'>
+                <a href='informasi'>Read More</h6></a>
+              </div>
             </div>
           </div>
         </div>
