--- a/swab_vaksin/templates/informasi_vaksin_swab.html
+++ b/swab_vaksin/templates/informasi_vaksin_swab.html
@@ -3,31 +3,75 @@
 
 <html>
   <head>
-    {% block css %} <link rel="stylesheet" href="{% static 'styles/informasi_vaksin_swab.css' %}" /> {% endblock css %}
+    {% block css %} <link rel="stylesheet" href="{% static 'styles/vaksin_swab.css' %}"/> {% endblock css %}
     {% block title %} Swab & Vaksin {% endblock title %}    
   </head>
   <body>
     {% block content %}
     <div class='container'>
-        <div class='cards'>
-            <div class='card'>
-            <div class='crd-header'>
-                <div class='cImage'><img  src="" alt=""></div>
-                <div class='cDescription'>
-                <h3>Vaksin</h3>
-                <h6>Produsen: </h6>
-                <h6>Tahun Produksi: </h6>
-                <h6>Frekuensi Suntik: </h6>
+      <div class='contain-wrapper' id='info'>
+        <div class='info-wrapper'>
+          <div class='iImage'> <img src="" alt=""> </div>
+          <div class='iDescription'>
+            <div class='info-lengkap'>
+              <h3>Vaksin</h3>
+              <p><span>Produsen</span>:</p>
+              <p><span>Tahun Produksi</span>:</p>
+              <p><span>Frekuensi Suntik</span>:</p>
+              <p><span>Efek Samping</span>:</p>
+              <p>Description</p>
+            </div>
+          </div>
+        </div>
+
+        <div class='experience-wrapper'>
+          <div class=experience-header>
+            <h3 class='title-pengalaman'>Pengalaman</h3>
+            <button class="button buttonadd">+</button>
+          </div>
+          <div class='contain-wrapper'>
+            <div class='cards'>
+              <div class='card'>
+                <div class='crd-header'>
+                  <div class='pImage'><img  src="" alt=""></div>
+                  <div class='pInformation' id='desc'>
+                    <h6>Manusia</h6>
+                    <p>Pekerjaan, umur</p>
+                  </div>
                 </div>
+                <div class='crd-description'>
+                  <p>Description</p>
+                </div>
+              </div>
+              <div class='card'>
+                <div class='crd-header'>
+                  <div class='pImage'><img  src="" alt=""></div>
+                  <div class='pInformation' id='desc'>
+                    <h6>Manusia</h6>
+                    <p>Pekerjaan, umur</p>
+                  </div>
+                </div>
+                <div class='crd-description'>
+                  <p>Description</p>
+                </div>
+              </div>
+              <div class='card'>
+                <div class='crd-header'>
+                  <div class='pImage'><img  src="" alt=""></div>
+                  <div class='pInformation' id='desc'>
+                    <h6>Manusia</h6>
+                    <p>Pekerjaan, umur</p>
+                  </div>
+                </div>
+                <div class='crd-description'>
+                  <p>Description</p>
+                </div>
+              </div>
             </div>
-            <p>Description</p>
-            <div class='crd-btn'>
-                <button id='read-more-btn' href='informasi'>Read More</button>
-            </div>
-            </div>
+          </div>
         </div>
-        </div>
-        {% endblock content %}
+      </div>
     </div>
+    {% endblock content %}
   </body>
 </html>
