Nambahin page artikel

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
                 Lokasi
             </div>
             <div class="opt">   
-                Artikel
+                <a href="artikel/"> Artikel </a>
             </div>
             <div class="login-btn">
                 LOGIN
