--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,7 @@
 
 <body>
     {% include 'navbar.html' %}
-    <div>
-        <h1>Hello, world!</h1>
-        {% block content %}
-        {% endblock content %}
-    </div>
+    {% block content %} {% endblock %}
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
