--- a/swab_vaksin/templates/informasi_vaksin_swab.html
+++ b/swab_vaksin/templates/informasi_vaksin_swab.html
@@ -3,15 +3,15 @@
 
 <html>
   <head>
-    {% block css %} <link rel="stylesheet" href="{% static 'styles/vaksin_swab.css' %}"/> {% endblock css %}
+    {% block css %} <link rel='stylesheet' href="{% static 'styles/vaksin_swab.css' %}"/> {% endblock css %}
     {% block title %} Swab & Vaksin {% endblock title %}    
   </head>
   <body>
     {% block content %}
     <div class='container'>
-      <div class='contain-wrapper'>
+      <div class='contain-wrapper' id='info'>
         <div class='info-wrapper'>
-          <div class='iImage'> <img src="" alt=""> </div>
+          <div class='iImage'> <img src='' alt=''> </div>
           <div class='iDescription'>
             <div class='info-lengkap'>
               <h3>Vaksin</h3>
@@ -65,7 +65,7 @@
             <div class='cards'>
               <div class='card'>
                 <div class='crd-header'>
-                  <div class='pImage'><img  src="" alt=""></div>
+                  <div class='pImage'><img  src='' alt=''></div>
                   <div class='pInformation' id='desc'>
                     <h6>Manusia</h6>
                     <p>Pekerjaan, umur</p>
@@ -77,7 +77,7 @@
               </div>
               <div class='card'>
                 <div class='crd-header'>
-                  <div class='pImage'><img  src="" alt=""></div>
+                  <div class='pImage'><img  src='' alt=''></div>
                   <div class='pInformation' id='desc'>
                     <h6>Manusia</h6>
                     <p>Pekerjaan, umur</p>
@@ -89,7 +89,7 @@
               </div>
               <div class='card'>
                 <div class='crd-header'>
-                  <div class='pImage'><img  src="" alt=""></div>
+                  <div class='pImage'><img  src='' alt=''></div>
                   <div class='pInformation' id='desc'>
                     <h6>Manusia</h6>
                     <p>Pekerjaan, umur</p>
