--- a/lokasi/static/lokasi/main.css
+++ b/lokasi/static/lokasi/main.css
@@ -79,6 +79,11 @@ a.article-title:hover {
     font-size: 2.5rem;
 }
 
+.pagination {
+    margin-top: 20px;
+    position: absolute;
+}
+
 /* .btn-primary {
-    
+
 } */
