routing and create forum details

--- a/forum/templates/forum/list_forum.html
+++ b/forum/templates/forum/list_forum.html
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
                             <div class='crd-btn'>
-                                <a href='thread'>Read More</h6></a>
+                                <a href="{% url 'forum-detail' forum.pk %}">Read More</h6></a>
                             </div>
                         </div>
                         {% endfor %}
