--- a/lokasi/templates/lokasi/index.html
+++ b/lokasi/templates/lokasi/index.html
@@ -18,7 +18,7 @@
                     </div>
                     </article>
                 {% endfor %}
-                <a class="btn btn-primary" href="{% url 'post-create' %}" role="button">Tambah Lokasi</a>
+                
                 <div class="pagination">
                     {% if is_paginated %}
     
@@ -43,6 +43,12 @@
                     {% endif %}
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="content-section">
+                    <h4>Mempunyai rekomendasi lokasi lain?</h4>
+                    <a class="btn btn-primary" href="{% url 'post-create' %}" role="button">Sarankan dan Tambah Lokasi</a>
+                </div>
+              </div>
         </div>
     </main>
 {% endblock content %}
