--- a/lokasi/templates/lokasi/index.html
+++ b/lokasi/templates/lokasi/index.html
@@ -46,7 +46,7 @@
             <div class="col-md-4">
                 <div class="content-section">
                     <h4>Mempunyai rekomendasi lokasi lain?</h4>
-                    <a class="btn btn-primary" href="{% url 'post-create' %}" role="button">Sarankan dan Tambah Lokasi</a>
+                    <a class="btn btn-primary" href="{% url 'post-create' %}" role="button">Rekomendasikan dan Tambah Lokasi</a>
                 </div>
               </div>
         </div>
