--- a/swab_vaksin/static/styles/vaksin_swab.css
+++ b/swab_vaksin/static/styles/vaksin_swab.css
@@ -173,7 +173,7 @@ a:hover, a:active {
 }
 
 .experience-wrapper .cards{ 
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .experience-wrapper .card{
