fix error on post data

--- a/swab_vaksin/templates/informasi_vaksin_swab.html
+++ b/swab_vaksin/templates/informasi_vaksin_swab.html
@@ -50,7 +50,8 @@
                         {% csrf_token %}
                         {% for field in form%}
                         <div class='row mb-3 mx-4'>
-                          <textarea class='form-control' placeholder='Tuliskan pengalaman vaksin anda disini!' name='message'>{{form.pengalaman}}</textarea>
+                          {{form.pengalaman}}
+                          
                         </div>
                         {% endfor %}
                         <p id='inputForumId' class='visually-hidden'></p>
