--- a/swab_vaksin/templates/informasi_vaksin_swab.html
+++ b/swab_vaksin/templates/informasi_vaksin_swab.html
@@ -3,7 +3,7 @@
 
 <html>
   <head>
-    {% block css %} <link rel='stylesheet' href="{% static 'styles/vaksin_swab.css' %}"/> {% endblock css %}
+    {% block css %} <link rel="stylesheet" href="{% static 'styles/vaksin_swab.css' %}" /> {% endblock css %}
     {% block title %} Swab & Vaksin {% endblock title %}    
   </head>
   <body>
@@ -48,16 +48,12 @@
                     <div class='form'> 
                       <form method='POST' action='' id='addPengalamanForm'>
                         {% csrf_token %}
-                        {% for field in form%}
-                        <div class='row mb-3 mx-4'>
+                        <div class='row mb-3 mx-4' style='height: 300px'>
                           {{form.pengalaman}}
-                          
                         </div>
-                        {% endfor %}
                         <p id='inputForumId' class='visually-hidden'></p>
                       </form>
                     </div>
-
                     <input type='submit' form='addPengalamanForm' class='btn submit-button fw-bold' value='Submit' data-bs-dismiss='modal' />
                   </div>
                 </div>
@@ -86,5 +82,6 @@
       </div>
     </div>
     {% endblock content %}
+    {% block js %} <script src="{% static 'js/swab_vaksin.js' %}"></script> {% endblock js %}
   </body>
 </html>
