login register works

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
                 Artikel
             </div>
             <div class="login-btn">
-                LOGIN
+                <a href="login/" > LOGIN </a>
             </div>
         </div>
     </div>
