--- a/swabIn/templates/swabIn/index.html
+++ b/swabIn/templates/swabIn/index.html
@@ -5,13 +5,19 @@
 Swab.In
 {% endblock title %}
 {% block content %}
-<div>
-    Hello World!
-</div>
-
-<button class='btn1'>
-    Click
-</button>
+<section>
+    <div class="content">
+        <div class="info">
+            <h2>Welcome to <br> <span>Swab.in!</span></h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas iste nisi dignissimos earum soluta id
+                dolorem, nobis aliquid quisquam mollitia qui commodi consequatur doloribus sunt tenetur. Consequuntur
+                corrupti nam odit.</p>
+            <button class='btn1'>
+                More Info
+            </button>
+        </div>
+    </div>
+</section>
 {% endblock content %}
 
 {% block js %}
